# Sentinel-X

./: .gitignore  CODEOWNERS  README.md  prd.md  pyproject.toml  t1.md  t2.md  t3.md
.github/workflows/: ci.yml
api/: README.md  app.py  models.py
dashboard/: README.md
modules/agents/: README.md
modules/detection/: README.md
modules/platform/: README.md  __init__.py  compliance_engine.py  drift_monitor.py  shadow_ai_discovery.py
orchestrator/: README.md  __init__.py  engine.py
resources/planning/phase1/: t3-phase1-plan.md
schemas/: README.md  __init__.py  models.py
tests/: test_orchestrator_engine.py  test_schema_contract.py
