[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelx"
version = "0.1.0"
description = "SentinelX shared schemas and integration contracts"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["api", "orchestrator", "schemas"]
